# faceIdentifyDemo

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt3  Makefile  README.md  baidu  base64.cpp  base64.h  cmake_install.cmake  connect  connect.cpp  get_token.cpp  get_token.h  main.cpp  mtcnn_c  test.cpp
